--- a/FindNumber/solution/index.html
+++ b/FindNumber/solution/index.html
@@ -40,6 +40,6 @@
             <button type="submit" id="reset">RESET</button>
         </div>
     </div>
-    <script src="./indeks.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
