--- a/LotteryGame/solution/index.html
+++ b/LotteryGame/solution/index.html
@@ -8,6 +8,9 @@
     <title>Lottery Game</title>
 </head>
 <body>
+    <div id="image">
+        <img src="https://www.dreamencyclopedia.net/img/imgdreammore/lucky-numbers.jpg" alt="lottery" width="100%" height="220px" > 
+    </div>
     <div class="main">
     <input type="number" id="number"  min="1" max="8">
     <button id="btn">Lucky Games</button>
