--- a/LotteryGame/solution/index.html
+++ b/LotteryGame/solution/index.html
@@ -11,7 +11,7 @@
     <div id="image">
         <img src="https://www.dreamencyclopedia.net/img/imgdreammore/lucky-numbers.jpg" alt="lottery" width="100%" height="220px" > </div>
     <div class="main">
-    <input type="number" id="number"  min="1" max="8" placeholder="Please enter a number between 1 and 8">
+    <input type="number" id="number"  min="1" max="8" placeholder="Enter a number between 1 and 8">
     <button id="btn">Lucky Games</button>
     <p id="p1"></p>
     <p id="p2"></p>
