--- a/ToDo/index.html
+++ b/ToDo/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="https://thumbs.dreamstime.com/b/business-to-do-list-flat-icon-modern-style-task-list-business-to-do-list-flat-icon-modern-style-any-purposes-perfect-web-138650221.jpg" type="image/x-icon">
     <title>To Do...</title>
 </head>
 <body>
@@ -14,7 +15,7 @@
         <h1>To Do List</h1>
     </header>
     <form>
-        <input type="text" class="todo-input">
+        <input type="text" class="todo-input" placeholder="&#9997; Create a task" >
         <button class="todo-button" type="submit"><i class="fas fa-plus-square"></i></button>
         <div class="select">
             <select name="todos" class="filter-todo">
