--- a/FindNumber/solution/index.html
+++ b/FindNumber/solution/index.html
@@ -28,13 +28,13 @@
                 <button type="submit" class="button" id="button">CHECK</button>
             </div>
             <div class="img" id="img">
-                <img id="img1" src="./image/15b585b987b312e1318073d17a7f801c.jpg" alt="">
-                <img id="img2" src="./image/vdhsKHzo_400x400.jpg" alt="">
-                <img id="img3" src="./image/istockphoto-184941527-612x612.jpg" alt="">
+                <img id="img1" src="./image/15b585b987b312e1318073d17a7f801c.jpg" alt="" width="330px" height="330px">
+                <img id="img2" src="./image/vdhsKHzo_400x400.jpg" alt=""width="330px" height="330px">
+                <img id="img3" src="./image/istockphoto-184941527-612x612.jpg" alt=""width="330px" height="330px">
             </div>
             <div id="attempt">
                 <h2>Write The Number</h2>
-                <p>Number Of The Attemps  <span id="span">10</span> </p>
+                <p>Rest Of The Attemps  <span id="span">5</span> </p>
             </div>
             <label for="reset">TRY AGAIN</label>
             <button type="submit" id="reset">RESET</button>
