--- a/IosCalculator/solution/index.html
+++ b/IosCalculator/solution/index.html
@@ -19,7 +19,7 @@
         <div class="current-display">0</div>
       </div>
       <div class="buttons-container">
-        <div class="button function ac">C</div>
+        <div class="button function ac">AC</div>
         <div class="button function pm">±</div>
         <div class="button function percent">%</div>
         <div class="button operator division">÷</div>
