--- a/CountryInfo/index.html
+++ b/CountryInfo/index.html
@@ -26,7 +26,7 @@
        <div class="container input-section" >
         <div class="row justify-content-center">
           <div class="col col-sm-5 col-md-2 align-self-center">
-            <input id="input" type="text" />
+            <input id="input" type="text" placeholder="Write a country name" />
           </div>
           <div class="col col-sm-1 col-md-2 align-self-center">
             <button id="search">Add</button>
