--- a/CountryInfo/index.html
+++ b/CountryInfo/index.html
@@ -29,7 +29,7 @@
             <input id="input" type="text" placeholder="Write a country name" />
           </div>
           <div class="col col-sm-1 col-md-2 align-self-center">
-            <button id="search">Add</button>
+            <button type="submit" id="search">Add</button>
           </div>
           <!-- <div class="alert alert-danger alert-container">No neighbour</div> -->
         </div>
